--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                       </li>
                     </ul>
                     <form class="form-inline">
-                      <button class="btn ml-3 ml-lg-5 nav_search-btn" type="submit"></button>
+                      <button class="btn ml-3 ml-lg-5 nav_search-btn" type="submit" aria-label="submit"></button>
                     </form>
                   </div>
                 </div>
@@ -239,7 +239,7 @@
                       <img src="images/c1.jpg" alt="">
                       <div class="detail-box">
                         <button>
-                          <img src="images/play-icon.png" alt="">
+                          <img src="images/play-icon.png" alt="play">
                         </button>
                         <h2>
                           Boxing
@@ -259,7 +259,7 @@
                       <img src="images/c2.jpg" alt="">
                       <div class="detail-box">
                         <button>
-                          <img src="images/play-icon.png" alt="">
+                          <img src="images/play-icon.png" alt="play">
                         </button>
                         <h2>
                           Boxing
@@ -279,7 +279,7 @@
                       <img src="images/c1.jpg" alt="">
                       <div class="detail-box">
                         <button>
-                          <img src="images/play-icon.png" alt="">
+                          <img src="images/play-icon.png" alt="play">
                         </button>
                         <h2>
                           Boxing
@@ -299,7 +299,7 @@
                       <img src="images/c2.jpg" alt="">
                       <div class="detail-box">
                         <button>
-                          <img src="images/play-icon.png" alt="">
+                          <img src="images/play-icon.png" alt="play">
                         </button>
                         <h2>
                           Boxing
@@ -522,6 +522,7 @@
                   <div class="d-flex ">
                     <button>
                       SEND
+                      <span class="d-flex" aria-label="d-flex"></span>
                     </button>
                   </div>
                 </form>
